新增注册分支

--- a/register.html
+++ b/register.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <div>这是第二个文件</div>
-    <h1>我在master分支上修改了这个文件</h1>
-    <h1>我在login分支上修改了这个文件</h1>
+    <h1>这是注册分支</h1>
 
 </body>
 
