--- a/02.html
+++ b/02.html
@@ -9,13 +9,10 @@
 </head>
 
 <body>
+    <h1>login</h1>
     <div>这是第二个文件</div>
     <h1>我在master分支上修改了这个文件</h1>
-    <h1>aaa</h1>
-    <p>在远程修改</p>
-    <p>再加一句</p>
-    
-  <p>在远程增加一句</p>
+   
 </body>
 
 </html>
