--- a/01.html
+++ b/01.html
@@ -14,14 +14,14 @@
     }
 
     .bgc {
-      background-color: pink;
+      background-color: rgb(195, 255, 192);
     }
   </style>
 </head>
 
 <body>
   <div id="app" class="bgc">
-   aaaaaaaa
+这是一段话11111
   
 
 
